src/ide/css/tgui.css
/*TODO remove classes from modal components, instead: .tgui-modal button ...*/

.tgui {
	margin: 0;
	padding: 0;
	border: 0;
	box-sizing: border-box;
}

.tgui-control {
	font-family: sans-serif;
	font-size: 10pt;
	color: #000;
	border: none;
	margin: 3px;
	position: relative;
	margin: 3px calc(min(3px, max(0.5px, calc(0.5vw - 3px)))); /* TODO: only for toolbar items */
}

.tgui-hidden {
	display: none;
}

.tgui-tooltip {
	display: none;
	background-color: #eec;
	color: #000;
	font-family: sans-serif;
	font-size: 9pt;
	transition: opacity 0.5s;
	padding: 2px;
	border: 1px solid #000;
	border-radius: 3px;
	white-space: nowrap;
	z-index: 10;
}

.tgui-tooltip-left {
	position: absolute;
	left: 1px;
	top: 25px;
}

.tgui-tooltip-right {
	position: absolute;
	right: 1px;
	top: 25px;
}

.tgui-control:hover .tgui-tooltip {
	display: block;
}

.tgui-toolbar-separator {
	float: left;
	width: 1px;
	height: 22px;
	background: #999;
	margin: 3px calc(min(10px, max(1.5px, calc(1vw - 3px)))); /* TODO: only for toolbar items */

	box-shadow: 0px 1px 2px #ffffff80;
}

/* used for program status on the toolbar */
.tgui-label {
	background: #ccc;
	box-shadow: inset 0px 1px 4px #00000030, inset 0px -1px 4px #ffffff50,
		0px 0px 1px 0px #000000a0, 0px 2px 1px 0px #ffffffc0;

	text-align: center;
	vertical-align: middle;
	padding: 2px 10px 2px 10px;
	border-radius: 1px;
}

.tgui-button-text {
	cursor: pointer;

	background: #ddd;

	border-width: 1px;
	border-style: solid;

	border-color: #eee;
	box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
	border-radius: 1.5px;

	text-align: center;
	vertical-align: middle;
	padding: 2px 10px 2px 10px;
}

.tgui-button-text:hover {
	background: #eee;
	border-color: #fff;
}

.tgui-button-text:focus {
	border-color: #222;
}

.tgui-button-text:active {
	background: #bbb;
	border-color: #888;
	box-shadow: inset 0px 0px 2px rgba(0, 0, 0, 0.2), 0px 0px 1px 1px #ffffff20;
}

.tgui-button-icon {
	cursor: pointer;

	background: #ddd;

	border-width: 1px;
	border-style: solid;
	border-color: #eee;

	box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);

	border-radius: 1.5px;
}

.tgui-button-icon:hover {
	background: #eee;
	border-color: #fff;
}

.tgui-button-icon:focus {
	border-color: #222;
}

.tgui-button-icon:active {
	background: #bbb;
	border-color: #888;
	box-shadow: inset 0px 0px 2px rgba(0, 0, 0, 0.2), 0px 0px 1px 1px #ffffff20;
}

/* used in file dialog */
.tgui-status-box {
	vertical-align: middle;
	padding: 4px;
}

.tgui-list-box {
	background-color: #fff;
	box-shadow: 0px 0px 2px #00000030;
	border-radius: 2px;
	border: 1px solid #ccc;
	padding: 3px;
}

.tgui-text-box {
	background-color: #fff;
	box-shadow: 0px 0px 2px #00000030;
	border-radius: 2px;
	border: 1px solid #ccc;
	padding: 0 0 0 3px;
}

.tgui-tree {
	width: 100%;
	height: 100%;
	font-family: monospace;
	font-size: 9pt;
	line-height: 13px;
	overflow: auto;
}

.tgui-tree-main {
	border-collapse: collapse;
}

.tgui-tree-cell-toggle {
	display: block;
	width: 15px;
}

.tgui-tree-cell-content {
	width: calc(100% - 15px);
	white-space: nowrap;
}

.tgui-tree-toggle {
	vertical-align: middle;
	padding-right: 3px;
	color: #999;
	transition: color 0.5s;
}

.tgui-tree-toggle:hover {
	color: #000;
}

.tgui-tree-element {
}

.tgui-tree-element:hover {
	background: #cdf;
}

.tgui-separator {
	display: block;
	position: fixed;
	left: 0vw;
	top: 0vh;
	width: 100vw;
	height: 100vh;
	z-index: 99;
	background: rgba(64, 64, 64, 0.8);
}

.tgui-modal {
	position: absolute;
	box-sizing: border-box;
	color: #000;
	font-family: sans-serif;
	font-size: 10pt;
	border: 5px solid #888;
	overflow-y: scroll;
}

.tgui-modal-titlebar {
	display: flex;
	flex-direction: row;

	background: #008;
	color: #fff;
	padding: 2px 2px 2px 10px;

	font-weight: bold;
	font-size: 10pt;
	user-select: none;
}

.tgui-modal-titlebar-title {
	flex: auto;
	color: #fff;
	font-family: sans-serif;
	vertical-align: middle;
	width: auto;
}

.tgui-modal-content {
	background: #eee;
	position: absolute;
	overflow: auto;
	padding: 0px 10px;
	left: 0;
	top: 24px;
	width: 100%;
	/*height: calc(100% - 24px);*/
}

.tgui-modal-buttonbar {
	position: absolute;
	box-shadow: inset 0px 2px 3px -1px #00000040;
	/*background: #0000ff60; /* */
	background: #e5e5e5;
	width: 100%;
	height: 39px;
	padding: 7px 0px;
	bottom: 0px;
	display: flex;
	justify-content: flex-end;
}

.tgui-modal-button {
	cursor: pointer;

	background: #eee;
	border-width: 1px;
	border-color: #000;
	box-shadow: 0px 1px 3px #00000033;

	border-radius: 2px;
	color: #000;
}
.tgui-modal-button:focus:not(:disabled) {
	background: #eee;
	border-width: 2px;
}

.tgui-modal-button:hover:not(:disabled) {
	background: #fff;
	border-width: 2px;
}

.tgui-modal-button:active:not(:disabled) {
	background: #bbb;
	border-width: 2px;
	box-shadow: inset 0px 0px 3px #00000066;
	color: #000;
}

.tgui-modal-button:disabled {
	color: #333;
}

.tgui-modal-default-button {
	cursor: pointer;

	font-weight: bold;

	background: #16f;
	border-width: 1px;
	border-color: #04d;
	box-shadow: 0px 1px 3px #00000033;

	border-radius: 2px;
	color: #fff;
}
.tgui-modal-default-button:focus {
	background: #16f;
	border-width: 2px;
	border-color: #027;
}

.tgui-modal-default-button:hover {
	background: #27f;
	border-width: 2px;
}

.tgui-modal-default-button:active {
	background: #139;
	border-width: 2px;
	border-color: #000;
	box-shadow: inset 0px 0px 3px #00000066;
}

.tgui-modal-default-button:disabled:disabled {
	background: #4bf;
	color: #333;
}

.tgui-modal-dropdown {
	background-color: #fff;
	box-shadow: 0px 0px 2px #00000030;
	border-radius: 2px;
	border: 1px solid #ccc;
	padding: 3px;
}

.tgui-panel-container {
	overflow: hidden;
	touch-action: none;
	box-sizing: border-box;
}

/* this class is additionaly used for floating panels */
.tgui-panel-float {
	box-shadow: 0px 1px 8px #00000050, 0px 0px 0px 1px #00000020;
}

.tgui-panel-titlebar {
	display: flex;
	flex-direction: row;

	position: absolute;
	width: 100%;
	height: 22px;
	line-height: 22px;
	padding: 1px;
	left: 0;
	top: 0;
	background: #00c;
	color: #fff;
	font-family: sans-serif;
	vertical-align: middle;
	/*old style on browsers like firefox: font-family: serif; -- "sans" does not work and leads to "serif"*/
	font-weight: bold;
	font-size: 10pt;

	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

.tgui-panel-titlebar-icon {
	margin-right: 1px;
}

.tgui-panel-titlebar-title {
	flex: auto;
	color: #fff;
	font-family: sans-serif;
	vertical-align: middle;
	padding-left: 1px;
	width: auto;
}

/* .tgui-panel-dockbutton is also used in modal dialogs */
.tgui-panel-dockbutton {
	padding: 0;
	width: 20px;
	height: 20px;
	margin: 0 0 0 1px;

	background: #ddd;

	border-width: 1px;
	border-style: solid;
	border-color: #eee #ccc #ccc #eee;

	box-shadow: inset -1px -1px 2px -2px #00000050,
		inset 1px 1px 2px -2px #fffffff0;

	border-radius: 1.5px;
}

.tgui-panel-dockbutton:focus {
	border-color: #77f;
	box-shadow: inset 0px 0px 0.5px 0.5px #7777ff30;
}

.tgui-panel-dockbutton:active {
	background: #bbb;
	border-color: #777;
	background-clip: padding-box;
	box-shadow: inset 1px 0px 3px -1px #00000040,
		inset 0px 2px 3px -1px #00000040;
}

.tgui-panel-content {
	position: absolute;
	width: 100%;
	height: calc(100% - 22px);
	left: 0;
	top: 22px;
	background: #ffe;
	color: #000;
	overflow: hidden;
}

